fix: search wrapper wrap

--- a/project-management-app/src/app/board/pages/search/search.component.scss
+++ b/project-management-app/src/app/board/pages/search/search.component.scss
@@ -7,4 +7,5 @@
   gap: 10px;
   box-sizing: border-box;
   padding: 10px;
+  flex-wrap: wrap;
 }
